<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/caught_exception"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/caught_exception"/>

    <Button
        android:id="@+id/binder_leak"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/binder_leak_str"/>
    <Button
        android:id="@+id/binder_overflow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/binder_overflow" />

    <Button
        android:id="@+id/child_thread_excpetion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/child_thread_excpetion" />

    <Button
        android:id="@+id/notification_systemui_crash"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notification_cause_systemui_crash" />


</LinearLayout>